Fixes to z-index of notification bar

--- a/ExilenceNextClient/src/app/core/containers/notification-sidebar-page/notification-sidebar-page.component.scss
+++ b/ExilenceNextClient/src/app/core/containers/notification-sidebar-page/notification-sidebar-page.component.scss
@@ -5,12 +5,15 @@
     height: $sidebar-content-height;
     position: absolute;
     background: none;
-    z-index: auto;
+    z-index: -1;
     .mat-sidenav {
         width: $sidebar-width;
         padding: $main-padding;
     }
     .mat-drawer-content {
+        z-index: auto;
+    }
+    &.toggled {
         z-index: auto;
     }
 }
